@@ -22,7 +22,7 @@ apply plugin: 'io.spring.dependency-management'
 apply plugin: 'jacoco'
 
 group = 'io.github.t3r1jj'
-version = '0.0.1-SNAPSHOT'
+version = '1.0.0'
 sourceCompatibility = 1.8
 
 repositories {
@@ -39,10 +39,16 @@ dependencies {
     implementation('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
     compile group: 'org.atmosphere', name: 'atmosphere-runtime', version: '2.5.0'
     compile group: 'org.atmosphere', name: 'atmosphere-spring', version: '2.4.20'
+    compile group: 'org.clapper', name: 'javautil', version: '3.2.0'
+    compile("org.aspectj:aspectjweaver:1.8.8")
+    compile 'net.openhft:compiler:2.3.1'
+    compile group: 'org.codehaus.janino', name: 'janino', version: '3.0.10'
+    compile 'one.util:streamex:0.6.7'
 
     runtimeOnly('org.springframework.boot:spring-boot-devtools')
     testImplementation('org.springframework.boot:spring-boot-starter-test')
     testImplementation('de.flapdoodle.embed:de.flapdoodle.embed.mongo')
+    testImplementation 'org.hamcrest:hamcrest-library:1.3'
     testRuntime "org.slf4j:slf4j-api:1.7.10"
 
     testCompile 'io.rest-assured:rest-assured:3.1.1'
@@ -58,6 +64,8 @@ configurations {
 
 test {
     useTestNG {}
+    jvmArgs "-XX:+UnlockExperimentalVMOptions", "-XX:+UseCGroupMemoryLimitForHeap"
+    maxHeapSize = "512m"
 }
 
 tasks.withType(Test) {
